fix(swatch): icons use display instead of visibility

--- a/components/swatch/index.css
+++ b/components/swatch/index.css
@@ -173,7 +173,7 @@ governing permissions and limitations under the License.
 
     .spectrum-Swatch-mixedValueIcon {
       color: var(--spectrum-swatch-dash-icon-color);
-      visibility: visible;
+      display: block;
     }
   }
 
@@ -215,7 +215,7 @@ governing permissions and limitations under the License.
   &[disabled],
   &.is-disabled {
     .spectrum-Swatch-disabledIcon {
-      visibility: visible;
+      display: block;
     }
   }
 
@@ -303,7 +303,7 @@ governing permissions and limitations under the License.
 }
 
 .spectrum-Swatch-mixedValueIcon {
-  visibility: hidden;
+  display: none;
   pointer-events: none;
   /* Undefined variable allows custom stylesheet or JS to pass the value to this element */
   color: var(--spectrum-picked-color, transparent);
@@ -313,7 +313,7 @@ governing permissions and limitations under the License.
   position: relative;
   z-index: 2;
 
-  visibility: hidden;
+  display: none;
   pointer-events: none;
 
   color: var(--highcontrast-swatch-disabled-icon-color, var(--mod-swatch-disabled-icon-color, var(--spectrum-swatch-disabled-icon-color)));
